security/NetworkSegmentation/random-generator-service.yml
apiVersion: v1
kind: Service
metadata:
  name: random-generator
spec:
  selector:
    app: random-generator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
